--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:name="tr.com.necatiefeaslan.saglikliyasam.ui.changepassword.ChangePasswordFragment"
         android:label="@string/action_change_password"
         tools:layout="@layout/fragment_change_password" />
+        
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
